--- a/pdjs.html
+++ b/pdjs.html
@@ -3,12 +3,13 @@
 
 <link href="pdjs.css" media="screen" rel="stylesheet" type="text/css" />
 <script src="jquery-1.7.1.min.js"> </script>
-<script type="text/javascript" src="pdjs.coffee.js"> </script>
+<script type="text/coffeescript" src="pdjs.coffee"> </script>
+<script type="text/javascript" src="coffee-script.js"> </script>
 <script>
 pdjs_settings = {
   subdomain: "pdt-dave",
   token: "MnCmrfJpwTfTgcVpCgth",
-  refresh: 3
+  refresh: 30
 }
 </script>
 
