preparing version 0.4.5 for github pages

--- a/examples/trigger.html
+++ b/examples/trigger.html
@@ -5,7 +5,7 @@
 <script src="lib/jquery-1.7.1.min.js"> </script>
 <script src="lib/moment.min.js"> </script>
 <script src="config.js"> </script>
-<script type="text/javascript" src="../js/pdjsbase.js"> </script>
+<script type="text/javascript" src="../js/pdjs.js"> </script>
 <script>
 trigger_incident = function() {
   desc = prompt("Please enter a description")
