--- a/examples/incidents.html
+++ b/examples/incidents.html
@@ -4,7 +4,7 @@
 <script src="lib/jquery-1.7.1.min.js"> </script>
 <script src="lib/moment.min.js"> </script>
 <script src="config.js"> </script>
-<script type="text/javascript" src="../js/pdjsbase.js"> </script>
+<script type="text/javascript" src="../js/pdjs.js"> </script>
 <script>
 var wevedonethisbefore = false
 update_incidents = function() {
