preparing version 0.4.8 for github pages

--- a/examples/trigger.html
+++ b/examples/trigger.html
@@ -13,6 +13,8 @@ trigger_incident = function() {
   PDJS.trigger({
     service_key: "5eb2b9dae1b2480abf59f58c78ba06e7",
     description: desc,
+    client: "Runbook",
+    client_url: "https://i.chzbgr.com/maxW500/3308038400/h24293626/",
     details: {
       source:"PDJS demo page",
       browser: navigator.userAgent,
